# analise-hits-spotify

./: .gitignore  README.md  analise-spotify-user_credentials (1).csv  anatomia-hit-spotify.ipynb  pyproject.toml
analise-hits-spotify/: LICENSE  Makefile  pyproject.toml
analise-hits-spotify/analise_hits_spotify/: __init__.py  dataset.py  plots.py
analise-hits-spotify/analise_hits_spotify/modeling/: predict.py  train.py
analise_hits_spotify/: features.py
docs/: mkdocs.yml
docs/docs/: index.md
