[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "analise-hits-spotify"
version = "0.0.1"
description = "Uma análise para descobrir as características de áudio comuns em músicas de sucesso no Spotify."
authors = [
  { name = "Cassio Dalbem Barth" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.9"
dependencies = [
    "awscli",
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "mkdocs",
    "notebook",
    "numpy",
    "pandas",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "tqdm",
    "typer",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

# Isso permite que o pacote seja instalado mesmo sem módulos Python ainda
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["venv*", "tests*", "notebooks*", "data*", "docs*", "reports*", "references*", "build*", "dist*"]

[tool.ruff]
line-length = 99
src = ["."]
include = ["pyproject.toml", "**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["analise_hits_spotify"]
force-sort-within-sections = true
