[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "analise_hits_spotify"
version = "0.0.1"
description = "Uma an\u00e1lise para descobrir as caracter\u00edsticas de \u00e1udio comuns em m\u00fasicas de sucesso no Spotify."
authors = [
  { name = "Cassio Dalbem Barth" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["analise_hits_spotify"]
include = ["pyproject.toml", "analise_hits_spotify/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["analise_hits_spotify"]
force-sort-within-sections = true

